# 
#  $Id: Makefile.am,v 1.1 2002/01/22 16:03:00 dfs Exp $
# 
#  Copyright (C) 1997 Lars Fenneberg
# 
#  See the file COPYRIGHT for the respective terms and conditions. 
#  If the file is missing contact me at lf@elemental.net 
#  and I'll send you a copy.
# 
#

AUTOMAKE_OPTIONS = foreign

INCLUDES = -D_GNU_SOURCE

ACLOCAL = @ACLOCAL@
LTLIBOBJS = @LTLIBOBJS@

SUBDIRS = include lib src etc man doc patches login.radius
EXTRA_DIST = BUGS CHANGES COPYRIGHT README README.radexample

CLEANFILES = *~
